--- a/pom.xml
+++ b/pom.xml
@@ -126,6 +126,11 @@
 		    </dependency>				
 		    <dependency>
 		        <groupId>org.springframework.social</groupId>
+		        <artifactId>spring-social-web</artifactId>
+		        <version>${spring-social.version}</version>
+		    </dependency>			
+		    <dependency>
+		        <groupId>org.springframework.social</groupId>
 		        <artifactId>spring-social-config</artifactId>
 		        <version>${spring-social.version}</version>
 		    </dependency>				
