--- a/pom.xml
+++ b/pom.xml
@@ -25,7 +25,7 @@
 		<commons-lang3.version>3.0</commons-lang3.version>
 		<commons-logging.version>1.1.1</commons-logging.version>
 		<spring-boot-maven-plugin.version>1.3.5.RELEASE</spring-boot-maven-plugin.version>
-		<spring.boot.version>1.3.1.RELEASE</spring.boot.version>
+		<spring.boot.version>1.3.5.RELEASE</spring.boot.version>
 		<spring.data.version>1.8.2.RELEASE</spring.data.version>
 		<spring-security-core.version>4.1.0.RELEASE</spring-security-core.version>
 		<spring-security-jwt.version>1.0.4.RELEASE</spring-security-jwt.version>
@@ -82,6 +82,16 @@
 				      <artifactId>spring-boot-starter-logging</artifactId>
 				    </exclusion>
 				</exclusions>
+			</dependency>
+			<dependency>
+				<groupId>org.springframework.boot</groupId>
+				<artifactId>spring-boot-starter-actuator</artifactId>
+				<version>${spring.boot.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>org.springframework.boot</groupId>
+				<artifactId>spring-boot-starter-test</artifactId>
+				<version>${spring.boot.version}</version>
 			</dependency>
 		    <dependency>
 		        <groupId>org.springframework.boot</groupId>
@@ -143,7 +153,13 @@
 		        <groupId>org.springframework.social</groupId>
 		        <artifactId>spring-social-security</artifactId>
 		        <version>${spring-social.version}</version>
-		    </dependency>			
+		    </dependency>	
+			<dependency>
+			    <groupId>org.springframework</groupId>
+			    <artifactId>spring-webmvc</artifactId>
+			    <version>${spring.version}</version>
+			</dependency>
+		    		
 			
 			
 			
