--- a/atrs-service/pom.xml
+++ b/atrs-service/pom.xml
@@ -46,6 +46,10 @@
 			<groupId>org.apache.commons</groupId>
 			<artifactId>commons-lang3</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>com.github.fakemongo</groupId>
+			<artifactId>fongo</artifactId>
+		</dependency>
 	</dependencies>
 	<build>
 		<resources>
