--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,7 @@
 		<apacheds-server-jndi.version>1.5.5</apacheds-server-jndi.version>
 		<commons-lang3.version>3.0</commons-lang3.version>
 		<commons-logging.version>1.1.1</commons-logging.version>
+		<fongo.version>2.0.4</fongo.version> 
 		<spring-boot-maven-plugin.version>1.3.5.RELEASE</spring-boot-maven-plugin.version>
 		<spring.boot.version>1.3.5.RELEASE</spring.boot.version>
 		<spring.data.version>1.8.2.RELEASE</spring.data.version>
@@ -159,11 +160,6 @@
 			    <artifactId>spring-webmvc</artifactId>
 			    <version>${spring.version}</version>
 			</dependency>
-		    		
-			
-			
-			
-			
 			<dependency>
 				<groupId>org.mongodb</groupId>
 				<artifactId>mongo-java-driver</artifactId>
@@ -199,6 +195,11 @@
 			    <groupId>org.apache.commons</groupId>
 			    <artifactId>commons-lang3</artifactId>
 			    <version>${commons-lang3.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>com.github.fakemongo</groupId>
+				<artifactId>fongo</artifactId>
+				<version>${fongo.version}</version>
 			</dependency>
             
 		</dependencies>
