--- a/atrs-web/src/main/resources/application.yml
+++ b/atrs-web/src/main/resources/application.yml
@@ -1,10 +1,19 @@
 security:
   oauth2:
     client:
-      client-id: acme
-      client-secret: acmesecret
+      client-id: admin
+      client-secret: admin
       scope: read,write
       auto-approve-scopes: '.*'
+      
+ldap:
+  client:
+    clientId: admin
+    clientSecret: admin
+    authorized-grant-types: password,refresh_token
+    authorities: ROLE_STAF
+    clientAuthenticationScheme: form
+
 
 facebook:
   client:
@@ -19,8 +28,8 @@ facebook:
     userInfoUri: https://graph.facebook.com/me
 github:
   client:
-    clientId: bd1c0a783ccdd1c9b9e4
-    clientSecret: 1a9030fbca47a5b2c28e92f19050bb77824b5ad1
+    clientId: eec3ecac4e7e3879396d
+    clientSecret: 8c260a76bc68fb03d5f9b63b47babb6dd31ba3c0
     accessTokenUri: https://github.com/login/oauth/access_token
     userAuthorizationUri: https://github.com/login/oauth/authorize
     clientAuthenticationScheme: form
